--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="ng-view"></div>
 </body>
-<script src="/config.js"></script>
-<script src="/libraries/angular.min.js"></script>
-<script src="/libraries/angular-route.min.js"></script>
-<script src="/ng-app/app.js"></script>
-<script src="/ng-app/services/api.service.js"></script>
-<script src="/ng-app/pages/auth/auth.controller.js"></script>
-<script src="/ng-app/pages/files/files.controller.js"></script>
+<script src="./config.js"></script>
+<script src="./libraries/angular.min.js"></script>
+<script src="./libraries/angular-route.min.js"></script>
+<script src="./ng-app/app.js"></script>
+<script src="./ng-app/services/api.service.js"></script>
+<script src="./ng-app/pages/auth/auth.controller.js"></script>
+<script src="./ng-app/pages/files/files.controller.js"></script>
 </html>
