--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Easishare Plugin</title>
 </head>
-<body>
+<body ng-controller="AppController as $mainCtrl">
     <div class="ng-view"></div>
 </body>
 <script src="./config.js"></script>
