--- a/ng-app/pages/auth/auth.html
+++ b/ng-app/pages/auth/auth.html
@@ -1,3 +1,10 @@
 <div>
-    AUTH PAGE
+    <p>AUTH PAGE</p>
+    
+    User Name <input type="text" ng-model="$ctrl.userName"/>
+    <br/>
+    Password  <input type="text" ng-model="$ctrl.password"/>
+
+    <button ng-click="$ctrl.doLogin()"></button>
+
 </div>
