--- a/ng-app/pages/auth/auth.html
+++ b/ng-app/pages/auth/auth.html
@@ -5,6 +5,6 @@
     <br/>
     Password  <input type="text" ng-model="$ctrl.password"/>
 
-    <button ng-click="$ctrl.doLogin()"></button>
+    <button ng-click="$ctrl.doLogin()">Login</button>
 
 </div>
