login page designs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Easishare Plugin</title>
+    <link href="https://demo2.easishare.com/web/favicon.ico?v=8.1.0" rel="shortcut icon" type="image/x-icon">
+    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/shared.css">
+    <link rel="stylesheet" href="./css/teal.css">
 </head>
 <body ng-controller="AppController as $mainCtrl">
     <div class="ng-view"></div>
