login page designs

--- a/ng-app/pages/auth/auth.html
+++ b/ng-app/pages/auth/auth.html
@@ -8,7 +8,7 @@
             </div>
         </section>
         <section class="login-box">
-            <form action="https://demo2.easishare.com/web/Login/Login" autocomplete="off" class="common-form" data-autoclear="5" id="LoginForm" method="post" novalidate="novalidate"> 
+            <form autocomplete="off" class="common-form" data-autoclear="5" id="LoginForm" method="post" novalidate="novalidate"> 
                 <p>
                     Login to your User Account here
                 </p>
