--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <script src="./config.js"></script>
 <script src="./libraries/angular.min.js"></script>
 <script src="./libraries/angular-route.min.js"></script>
+<script src="./libraries/soapClient.js"></script>
+<script src="./libraries/angular-soap.js"></script>
 <script src="./ng-app/app.js"></script>
 <script src="./ng-app/services/api.service.js"></script>
 <script src="./ng-app/pages/auth/auth.controller.js"></script>
