--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="./libraries/soapClient.js"></script>
 <script src="./libraries/angular-soap.js"></script>
 <script src="./ng-app/app.js"></script>
+<script src="./ng-app/services/auth.service.js"></script>
 <script src="./ng-app/services/api.service.js"></script>
 <script src="./ng-app/pages/auth/auth.controller.js"></script>
 <script src="./ng-app/pages/files/files.controller.js"></script>
