XML Parser array fix

--- a/ng-app/pages/files/files.html
+++ b/ng-app/pages/files/files.html
@@ -66,6 +66,7 @@
                 <td role="gridcell">
                 </td>
             </tr>
+
             <tr data-uid="8e054c1a-b4ef-495e-bc62-1d7f0c8215b8" role="row">
                 
                 <td class="grid-select-col" role="gridcell">
@@ -81,7 +82,7 @@
                         <i class="fa fa-lock ">
                         </i>
                     </span>
-                    <a class="item-name" href="#" onclick="ItemClick(&quot;8e054c1a-b4ef-495e-bc62-1d7f0c8215b8&quot;);">Test File 1.png</a>
+                    <a class="item-name" href="#">Test File 1.png</a>
                 </td>
                 <td role="gridcell">03/19/2019 6:10 AM</td>
                 <td role="gridcell">png</td>
