--- a/ng-app/pages/files/files.html
+++ b/ng-app/pages/files/files.html
@@ -4,6 +4,9 @@
 
 <section class="section">
     <div class="header-menu">
+        <a id="uploadFile" style="cursor: pointer;position: absolute;padding: 22px;font-size: 24px;right: 0;" title="Upload File" ng-click="$ctrl.showFileSelect()">
+            <i class="fa fa-upload"></i>
+        </a>
         <ol class="breadcrumb">
             <li><a class="pointer" ng-click="$ctrl.gotToPath(-1)">WorkDrive</a></li>
             <li ng-repeat="path in $ctrl.folderStack">
@@ -11,6 +14,7 @@
             </li>
         </ol>
     </div>
+    <input id="file1" style="display: none" type="file" onchange="angular.element(this).scope().$ctrl.handleFileAdd(this)">
 </section>
 <section class="section">
     <table role="grid" class="table table-responsive table-striped">
