--- a/ng-app/pages/files/files.html
+++ b/ng-app/pages/files/files.html
@@ -9,7 +9,7 @@
         <a class="file-action" ng-show="$ctrl.selectedFiles.length == 1 && !$ctrl.selectedFiles[0].isDirectory"  title="Download File">
             <i class="fa fa-download"></i>
         </a>
-        <a class="file-action" ng-show="$ctrl.selectedFiles.length"  title="Delete File">
+        <a class="file-action" ng-show="$ctrl.selectedFiles.length"  title="Delete File" ng-click="$ctrl.deleteAction()">
             <i class="fa fa-trash"></i>
         </a>
         <a class="file-action" ng-show="$ctrl.selectedFiles.length == 1"  title="Rename File" ng-click="$ctrl.startRenameFile($ctrl.selectedFiles[0])">
