--- a/index.html
+++ b/index.html
@@ -44,4 +44,5 @@
 <script src="./ng-app/services/api.service.js"></script>
 <script src="./ng-app/pages/auth/auth.controller.js"></script>
 <script src="./ng-app/pages/files/files.controller.js"></script>
+<script src="./ng-app/pages/files/share.model.controller.js"></script>
 </html>
