Copy/Move file initial

--- a/index.html
+++ b/index.html
@@ -45,4 +45,6 @@
 <script src="./ng-app/pages/auth/auth.controller.js"></script>
 <script src="./ng-app/pages/files/files.controller.js"></script>
 <script src="./ng-app/pages/files/share.model.controller.js"></script>
+<script src="./ng-app/pages/files/move.file.controller.js"></script>
+<script src="./ng-app/pages/files/files.controller.js"></script>
 </html>
