Copy/Move file functionality

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <script src="./ng-app/app.js"></script>
 <script src="./ng-app/services/auth.service.js"></script>
 <script src="./ng-app/services/api.service.js"></script>
+<script src="./ng-app/services/shared.store.js"></script>
 <script src="./ng-app/pages/auth/auth.controller.js"></script>
 <script src="./ng-app/pages/files/files.controller.js"></script>
 <script src="./ng-app/pages/files/share.model.controller.js"></script>
