--- a/ng-app/pages/files/files.html
+++ b/ng-app/pages/files/files.html
@@ -37,14 +37,14 @@
     </div>
 </section>
 <section class="section">
-    <table role="grid" class="table table-responsive table-striped">
+    <table role="grid" class="table table-responsive table-striped horizontal-scroll">
         <thead>
             <tr>
-                <th scope="col">
+                <!-- <th scope="col">
                     <i class="fa fa-check fa-grid-select">
                     </i>
-                </th>
-                <th class="k-header closer-left k-filterable" data-field="fileName" data-title="Name" scope="col" data-role="sortable">
+                </th> -->
+                <th class="k-header k-filterable" data-field="fileName" data-title="Name" scope="col" data-role="sortable">
                     <a class="k-grid-filter" tabindex="-1">
                         <span class="k-icon k-filter">
                         </span>
@@ -77,7 +77,7 @@
         <tbody style="width: 697px;">
 
             <tr ng-show="$ctrl.showNewFolderInput">
-                <td class="grid-select-col" role="gridcell"></td>
+                <!-- <td class="grid-select-col" role="gridcell"></td> -->
                 <td class="closer-left" role="gridcell">
                     <span title="">
                         <i class="fa fa-lg fa-folder-o"></i>
@@ -92,7 +92,7 @@
             </tr>
 
             <tr ng-show="!$ctrl.files.length">
-                <td role="gridcell"></td>
+                <!-- <td role="gridcell"></td> -->
                 <td role="gridcell">{{$ctrl.fileLoadStatus}}</td>
                 <td role="gridcell"></td>
                 <td role="gridcell"></td>
@@ -101,16 +101,17 @@
             
             <tr ng-repeat="file in $ctrl.files | groupBy:'-isDirectory'" ng-class="{ 'k-state-selected':file.isSelected}" ng-click="$ctrl.toggleFileSelect(file)">
                 
-                <td class="grid-select-col" role="gridcell">
+                <!-- <td class="grid-select-col" role="gridcell">
                     <i class="fa fa-check fa-grid-select"></i>
-                </td>
+                </td> -->
                 <td class="closer-left" role="gridcell">
                     <span title="">
+                        <i class="fa fa-check fa-grid-select"></i>
                         <i class="fa fa-lg" ng-class="{'fa-folder-o': file.isDirectory, 'fa-file-image-o': !file.isDirectory}"></i>
                         <!-- <i class=""></i><i class="fa fa-lock "></i> -->
                     </span>
                     <a ng-show="!file.isRenaming" class="item-name" ng-click="$ctrl.goToDirectory(file)" ng-class="{'pointer': file.isDirectory}">{{file.fileName}}</a>
-                    <input ng-show="file.isRenaming" class="item-name form-control" type="text" ng-model="file.editedName" style="display: inline"/>
+                    <input ng-show="file.isRenaming" class="item-name form-control" type="text" ng-model="file.editedName" style="display: inline" on-enter-press="$ctrl.updateFileName(file)"/>
                     <i class="fa fa-check" ng-show="file.isRenaming" ng-click="$ctrl.updateFileName(file)">
                     </i>
                     <i class="fa fa-times" ng-show="file.isRenaming" ng-click="$ctrl.cancelFileUpdate(file)">
