--- a/ng-app/pages/files/share-popup.html
+++ b/ng-app/pages/files/share-popup.html
@@ -1,4 +1,4 @@
-<div class="modal" id="shareModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ng-controller="ShareModalController as $ctrl">
+<div class="modal" id="shareModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ng-controller="ShareModalController as $ctrl" style="height:400px">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
